Adjust style to work in mobile

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -13,9 +13,23 @@ $maybe-color: $brand-color-left;
 $font-primary-family: 'Montserrat', sans-serif;
 $font-secondary-family: 'Roboto', sans-serif;
 
-@mixin section-constraints {
+$section-padding-phone: 24px;
+
+@mixin section {
   max-width: 95%;
   padding: 0 0 0 10%;
+
+  @include mdc-layout-grid-media-query_("phone") {
+    max-width: unset;
+    padding: 0;
+  }
+}
+
+@mixin section-head {
+
+  @include mdc-layout-grid-media-query_("phone") {
+    padding: 0 $section-padding-phone;
+  }
 }
 
 $background-color: #FDFFFC;
@@ -74,4 +88,3 @@ $elevated-surface-color: #f9f9f9;
 $filter-background-color: $background-color;
 
 $mdc-theme-primary: $brand-color-left;
-
