--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -8,7 +8,7 @@
 
 %>
 
-<div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone"
+<div class="mdc-layout-grid__cell"
      id="<%= "cell-#{identifier}-#{event_type}-#{dom_id event}" %>"
      style="order: <%= event_counter + 1 %>;">
   <div class="me-card me-card--feed mdc-card mdc-card--outlined event-<%= event.id %>"
