--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
   </section>
 <% else %>
   <%= render partial: "layouts/app-top-bar" %>
-  <section class="me-page--feed-section">
+  <section class="me-page--profile__section">
     <%#= render partial: 'layouts/bot' %>
     <div class="me-overlay"></div>
     <%= yield %>
