--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -7,26 +7,34 @@ $name-color: $font-primary-color;
 $description-color: $font-secondary-color;
 
 $mdc-layout-grid-columns: (
-        desktop: 12,
-        tablet: 18,
-        phone: 8
+desktop: 12,
+tablet: 18,
+phone: 8
 );
 
 .me-feed {
-  @include section-constraints;
 
-  & section {
-    //border-bottom: 1px solid #e0e0e0;
-    margin-bottom: 50px;
-  }
+
+  // & section {
+  //   margin-bottom: 50px;
+  // }
 
   &__section {
-    max-width: 960px;
     margin: auto;
     padding: 0 0 25px 0;
+    max-width: 960px;
     @include mdc-layout-grid-media-query_("phone") {
-      margin: 0;
+      max-width: unset;
+      padding: 0;
+      padding: 35px 0 35px 0;
+      border-bottom: 1px solid $border-color;
     }
+    //
+    // &:last-child {
+    //   @include mdc-layout-grid-media-query_("phone") {
+    //     border-bottom: none;
+    //   }
+    // }
 
     & h2 {
       margin: 8px 0;
@@ -36,6 +44,13 @@ $mdc-layout-grid-columns: (
       font-size: 24px;
       color: $font-secondary-color;
       font-family: $font-primary-family;
+      @include mdc-layout-grid-media-query_("phone") {
+        font-size: 22px;
+        line-height: 1.1em;
+        letter-spacing: -0.4px;
+        max-width: 90%;
+        padding: 0 $section-padding-phone;
+      }
 
       & span {
         font-size: 16px;
@@ -45,37 +60,50 @@ $mdc-layout-grid-columns: (
         color: $font-secondary-color;
         line-height: 1.6em;
         margin-top: 8px;
+        @include mdc-layout-grid-media-query_("phone") {
+          display: none;
+        }
       }
     }
 
-    & .me-filter {
-      display: block;
-      margin: 0 0 12px 0;
-      text-align: right;
-      //min-height: 90px;
-    }
+    // & .me-filter {
+    //   display: block;
+    //   margin: 0 0 12px 0;
+    //   text-align: right;
+    //   //min-height: 90px;
+    // }
 
-    & .me-feed__divider {
-      margin: 0;
-    }
+    // & .me-feed__divider {
+    //   margin: 0;
+    // }
 
   }
 
   &__section-head {
+    // @include section-head;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     margin-bottom: 6px;
+    @include mdc-layout-grid-media-query_("phone") {
+      flex-direction: column;
+    }
 
     & i {
       font-style: normal;
       color: $font-secondary-color-high-contrast;
       font-weight: 500;
+      @include mdc-layout-grid-media-query_("phone") {
+        display: none;
+      }
     }
   }
 
   &__load-more {
     text-align: center;
+    @include mdc-layout-grid-media-query_("phone") {
+      display: none;
+    }
 
     & .mdc-button {
       font-family: $font-secondary-family;
@@ -146,15 +174,18 @@ $mdc-layout-grid-columns: (
   }
 
   & .mdc-layout-grid {
+    --mdc-layout-grid-margin-phone: 0;
+    --mdc-layout-grid-gutter-phone: 0 16px;
+
     --mdc-layout-grid-margin-desktop: 0;
     --mdc-layout-grid-gutter-desktop: 0 16px;
 
     @include mdc-layout-grid-media-query_("phone") {
-      background-color: $surface-color;
-      border-radius: 20px;
-      border-radius: 20px;
-      margin-bottom: 35px;
-      @include mdc-elevation($z-value: 4);
+      // background-color: $surface-color;
+      // border-radius: 20px;
+      // border-radius: 20px;
+      // margin-bottom: 35px;
+      // @include mdc-elevation($z-value: 4);
     }
 
     & a {
@@ -162,26 +193,56 @@ $mdc-layout-grid-columns: (
     }
   }
 
+
+
   & .mdc-layout-grid__inner {
     @include mdc-layout-grid-media-query_("desktop") {
       @include mdc-layout-grid-inner(
-        $size: "desktop",
-        $margin: 0,
-        $gutter: 15px
+      $size: "desktop",
+      $margin: 0,
+      $gutter: 15px
       );
     }
-    //@include mdc-layout-grid-media-query_("tablet") {
-    //  @include mdc-layout-grid-inner(
-    //    $size: "tablet",
-    //    $margin: 0,
-    //    $gutter: 15px
-    //  );
-    //}
-    //@include mdc-layout-grid-media-query_("phone") {
-    //  @include mdc-layout-grid-inner($size: "phone", $margin: 0, $gutter: 15px);
-    //  & .mdc-layout-grid__cell:first-child {
-    //    grid-column-end: span 8;
-    //  }
-    //}
+
+    @include mdc-layout-grid-media-query_("phone") {
+      grid-gap: var(--mdc-layout-grid-gutter-desktop, 15px);
+      grid-template-columns: repeat(20, minmax(60vw, 1fr));
+      overflow-x: auto;
+      overflow-y: hidden;
+      padding: 0 $section-padding-phone;
+    }
+
+    &::-webkit-scrollbar {
+      @include mdc-layout-grid-media-query_("phone") {
+        display: none;
+      }
+    }
   }
+
+
+  & .mdc-layout-grid__cell {
+    @include mdc-layout-grid-media-query_("desktop") {
+      @include mdc-layout-grid-cell(
+      $size: "desktop",
+      $default-span: 3,
+      $gutter: 24px
+      );
+    }
+    @include mdc-layout-grid-media-query_("phone") {
+      @include mdc-layout-grid-cell(
+      $size: "phone",
+      $default-span: 1,
+      $gutter: 16px
+      );
+    }
+
+    &:last-child {
+      @include mdc-layout-grid-media-query_("phone") {
+        padding: 0 $section-padding-phone 0 0;
+        margin: 0 (-$section-padding-phone) 0 0;
+      }
+    }
+  }
+
+
 }
