--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -5,10 +5,9 @@
   display: inline;
   user-select: none;
   @include mdc-layout-grid-media-query_("phone") {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: flex-start;
+    // width: calc(100vw - 24px);
+    width: 100vw;
+    margin: 0 0 3px 0;
   }
 
   &:hover {
@@ -26,6 +25,9 @@
   & .mdc-chip-set {
     display: block;
     padding: 3px 0;
+    @include mdc-layout-grid-media-query_("phone") {
+      padding: 2px $section-padding-phone;
+    }
 
     & .material-icons {
       vertical-align: middle;
@@ -38,7 +40,7 @@
     & .mdc-chip {
       margin: 2px;
       @include mdc-layout-grid-media-query_("phone") {
-        margin: 4px;
+        // margin: 4px;
       }
     }
   }
@@ -66,7 +68,7 @@
     text-transform: uppercase;
     transition: $chip-transition;
     @include mdc-layout-grid-media-query_("phone") {
-      border: unset;
+      // border: unset;
     }
   }
 
@@ -75,7 +77,7 @@
     background-color: $chip-filter-background-active;
     border: $chip-border-size solid $chip-filter-border-color-active;
     @include mdc-layout-grid-media-query_("phone") {
-      border: unset;
+      border: $chip-border-size solid $chip-filter-background-active;
     }
   }
 }
