--- a/web/app/assets/stylesheets/components/me-follow-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-follow-chip-set.scss
@@ -13,14 +13,14 @@
     }
 
     & .mdc-chip__icon--leading {
-      //width: 0;
+      width: auto;
       opacity: 0.5;
       //transition: opacity 0.4s ease;
     }
 
     &:hover {
       & .mdc-chip__icon--leading {
-        //width: 18px;
+        width: auto;
         opacity: 1;
       }
     }
