--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -6,10 +6,25 @@
   &__section {
     padding: 35px 0;
     background: $background-z1-color;
+    @include mdc-layout-grid-media-query_("phone") {
+      border-bottom: 1px solid $border-color;
+    }
+
+    &:last-child {
+      @include mdc-layout-grid-media-query_("phone") {
+        border-bottom: none;
+      }
+    }
 
     &--z0 {
       background: $background-z0-color;
       border-bottom: 1px solid #efefef;
+    }
+
+    & .mdc-layout-grid {
+      @include mdc-layout-grid-media-query_("phone") {
+        // padding: 0 $section-padding-phone;
+      }
     }
   }
 
@@ -17,37 +32,39 @@
     //max-width: 85%;
     //margin: 0 0 0 10%;
     // padding-top: 35px;
-    
+
     @include mdc-layout-grid-media-query_("phone") {
-      padding-top: 45px;
+      // padding-top: 45px;
     }
   }
-  
+
   &--train-section {
     max-width: 95vw;
     margin: auto;
     // padding-top: 35px;
-    
+
     @include mdc-layout-grid-media-query_("phone") {
-      padding-top: 45px;
+      // padding-top: 45px;
     }
   }
-  
+
   &--events-section {
     max-width: 700px;
     margin: auto;
     @include mdc-layout-grid-media-query_("phone") {
-      padding-top: 45px;
+      padding: 24px;
+    }
+  }
+
+  &--profile-section {
+    @include mdc-layout-grid-media-query_("phone") {
+      padding: 24px;
     }
 
-    &::before {
-      content: close-quote;
-      background: linear-gradient(to top, #fafafa, transparent);
-      position: absolute;
-      width: 100%;
-      height: 145px;
-      left: 0;
-      border-bottom: 1px solid #e4e4e4;
+    & .me-feed__section {
+      @include mdc-layout-grid-media-query_("phone") {
+        padding: 6px 0 35px 0;
+      }
     }
   }
 }
