--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -77,19 +77,23 @@
             <%= render partial: 'components/collection/similar', locals: {
                 events:     items[:events],
                 identifier: identifier
-            } %>
+            } unless mobile_device? %>
 
-            <% if events_in_collection < 4 %>
-              <div class="me-feed__empty">
+            <%# if events_in_collection < 4 %>
+              <!-- <div class="me-feed__empty">
                 <i class="material-icons-sharp sentiment-satisfied">
                   sentiment_satisfied
                 </i>
                 <span>Estes são todos os eventos disponíveis para esta coleção. Experimente explorar mais ou diminuir os filtros.</span>
-              </div>
-            <% end %>
+              </div> -->
+            <%# end %>
 
           <% end %>
         </div>
+        <%= render partial: 'components/collection/similar', locals: {
+            events:     items[:events],
+            identifier: identifier
+        } if mobile_device? %>
         <% if events_in_collection >= 4 %>
           <div class="me-feed__load-more"
                data-action="click->section#loadMore"
@@ -99,8 +103,8 @@
             </button>
           </div>
         <% end %>
-        <% if items.empty? %>
-          <div class="me-card me-card--notice mdc-card mdc-card--outlined">
+        <%# if items.empty? %>
+          <!-- <div class="me-card me-card--notice mdc-card mdc-card--outlined">
             <div class="me-card__primary-section">
               <i class="material-icons">
                 info
@@ -113,8 +117,8 @@
             <div class="me-card__primary-action">
               Voltar para listagem completa
             </div>
-          </div>
-        <% end %>
+          </div> -->
+        <%# end %>
       </div>
     </div>
   <%# end %>
