--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -1,8 +1,10 @@
 <%= notice %>
-<% if current_user && current_user.admin? %>
-  <a href="<%= @event.url %>/edit">Editar</a>
-  <a href="/train">Treinar</a>
-<% end %>
+<%# if current_user && current_user.admin? %>
+  <!--
+    <a href="<%#= @event.url %>/edit">Editar</a>
+    <a href="/train">Treinar</a>
+ -->
+<%# end %>
 <div id="event" class="me-card me-card--single event-<%= @event.id %>"
      data-controller="event"
      data-target="event.event"
@@ -12,22 +14,23 @@
      data-event-modifier="single">
 
   <div class="me-card__head">
-    <div class="me-card__media" style="<%= get_image_style_attr @event, :single %>"></div>
-    <h2 class="me-card__name">
-      <%= @event.details_name %>
-    </h2>
-    <% if current_user %>
+    <div class="me-card__media" style="<%= get_image_style_attr @event, :single %>">
+      <% if current_user %>
       <div class="me-card__like-button" data-action="click->event#like">
         <div data-target="event.like">
           <button data-target="event.likeButton" id="add-to-favorites"
-                  class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_or_guest_user.taste_events_saved?(@event.id) %>"
-                  aria-label="Add to favorites" aria-hidden="true" aria-pressed="false">
-            <i class="material-icons-sharp mdc-icon-button__icon mdc-icon-button__icon--on">mood</i>
-            <i class="material-icons-sharp mdc-icon-button__icon">sentiment_satisfied</i>
-          </button>
-        </div>
+          class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_or_guest_user.taste_events_saved?(@event.id) %>"
+          aria-label="Add to favorites" aria-hidden="true" aria-pressed="false">
+          <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">star</i>
+          <i class="material-icons-sharp mdc-icon-button__icon">star_border</i>
+        </button>
       </div>
+    </div>
     <% end %>
+    </div>
+    <h2 class="me-card__name">
+      <%= @event.details_name %>
+    </h2>
   </div>
 
   <div class="me-card__content">
