--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -1,79 +1,79 @@
-<div id="saves" class="me-saves" data-controller="saves" data-target="saves.saves" data-observable="float-menu.section">
-  <% if current_user and !current_user.taste_events_saved.empty? %>
-    <h3 data-target="saves.header" class="mdc-typography--headline6">
-      Eventos salvos
-      <i class="material-icons">
-        chevron_right
-      </i>
-    </h3>
-    <div class="me-icon__group">
-      <div data-target="saves.scrollLeft" data-action="click->saves#scrollLeft"
-           class="me-icon me-icon--scroll-left me-icon--off">
-        <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
-             style="pointer-events: none; display: block; width: 100%; height: 100%;">
-          <g class="style-scope iron-icon">
-            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" class="style-scope iron-icon"></path>
-          </g>
-        </svg>
+<% if current_user and !current_user.taste_events_saved.empty? %>
+  <div id="saves" class="me-saves me-feed__section me-page__section" data-controller="saves" data-target="saves.saves" data-observable="float-menu.section">
+      <h3 data-target="saves.header" class="">
+        Eventos salvos
+        <i class="material-icons">
+          chevron_right
+        </i>
+      </h3>
+      <div class="me-icon__group">
+        <div data-target="saves.scrollLeft" data-action="click->saves#scrollLeft"
+             class="me-icon me-icon--scroll-left me-icon--off">
+          <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
+               style="pointer-events: none; display: block; width: 100%; height: 100%;">
+            <g class="style-scope iron-icon">
+              <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" class="style-scope iron-icon"></path>
+            </g>
+          </svg>
+        </div>
+        <div class="me-icon me-icon--scroll-right me-icon--off"
+             data-action="click->saves#scrollRight"
+             data-target="saves.scrollRight">
+          <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
+               style="pointer-events: none; display: block; width: 100%; height: 100%;">
+            <g class="style-scope iron-icon">
+              <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" class="style-scope iron-icon"></path>
+            </g>
+          </svg>
+        </div>
       </div>
-      <div class="me-icon me-icon--scroll-right me-icon--off"
-           data-action="click->saves#scrollRight"
-           data-target="saves.scrollRight">
-        <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
-             style="pointer-events: none; display: block; width: 100%; height: 100%;">
-          <g class="style-scope iron-icon">
-            <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" class="style-scope iron-icon"></path>
-          </g>
-        </svg>
-      </div>
-    </div>
-    <div class="me-saves__list mdc-layout-grid"
-         data-target="saves.list">
-      <div class="mdc-layout-grid__inner">
-        <% saved_events.each do |event| %>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-            <div class="me-card mdc-card me-card--saves event-<%= event.id %>"
-                 data-action="mouseover->saves-events#showEventDetails"
-                 data-controller="saves-events"
-                 data-saves-events-identifier="<%= event.id %>"
-                 data-saves-flip-key="<%= "saves-#{dom_id event}" %>"
-                 data-target="saves-events.event">
-              <div class="me-card__remove"
-                   data-action="click->saves-events#remove"
-                   data-target="saves-events.remove">
-                <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet" focusable="false">
-                  <path
-                    d="m55.7 52.7c6.2 6.7 12.4 13.5 18.6 20.2 2.2 2.4-1.4 5.9-3.5 3.5-6.2-6.7-12.3-13.4-18.5-20.1-6.1 6.8-12.3 13.4-18.4 20.1-2.2 2.4-5.7-1.2-3.5-3.5 6.2-6.7 12.4-13.5 18.6-20.2-6.2-6.7-12.4-13.5-18.6-20.2-2.2-2.4 1.4-5.9 3.5-3.5 6.1 6.6 12.3 13.3 18.4 20 6.2-6.7 12.3-13.4 18.5-20.1 2.2-2.4 5.7 1.2 3.5 3.5-6.2 6.8-12.4 13.5-18.6 20.3z"></path>
-                </svg>
+      <div class="me-saves__list mdc-layout-grid"
+           data-target="saves.list">
+        <div class="mdc-layout-grid__inner">
+          <% saved_events.each do |event| %>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <div class="me-card mdc-card me-card--saves event-<%= event.id %>"
+                   data-action="mouseover->saves-events#showEventDetails"
+                   data-controller="saves-events"
+                   data-saves-events-identifier="<%= event.id %>"
+                   data-saves-flip-key="<%= "saves-#{dom_id event}" %>"
+                   data-target="saves-events.event">
+                <div class="me-card__remove"
+                     data-action="click->saves-events#remove"
+                     data-target="saves-events.remove">
+                  <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet" focusable="false">
+                    <path
+                      d="m55.7 52.7c6.2 6.7 12.4 13.5 18.6 20.2 2.2 2.4-1.4 5.9-3.5 3.5-6.2-6.7-12.3-13.4-18.5-20.1-6.1 6.8-12.3 13.4-18.4 20.1-2.2 2.4-5.7-1.2-3.5-3.5 6.2-6.7 12.4-13.5 18.6-20.2-6.2-6.7-12.4-13.5-18.6-20.2-2.2-2.4 1.4-5.9 3.5-3.5 6.1 6.6 12.3 13.3 18.4 20 6.2-6.7 12.3-13.4 18.5-20.1 2.2-2.4 5.7 1.2 3.5 3.5-6.2 6.8-12.4 13.5-18.6 20.3z"></path>
+                  </svg>
+                </div>
+                <a href="<%= event.url %>"
+                   title="<%= event.details_name %>">
+                  <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event %>">
+                    <div class="me-card__overlay"
+                         data-target="saves-events.overlay"></div>
+                  </div>
+                  <div class="me-card__date" data-target="saves-events.date">
+                    <%= event.day_of_week['decorator'] %>
+                  </div>
+  <!--                <div class="me-card__title mdc-card__title"-->
+  <!--                     data-target="saves-events.title">-->
+                    <%#= limit_name_size event.details_name, 32 %>
+  <!--                </div>-->
+                </a>
               </div>
-              <a href="<%= event.url %>"
-                 title="<%= event.details_name %>">
-                <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event %>">
-                  <div class="me-card__overlay"
-                       data-target="saves-events.overlay"></div>
-                </div>
-                <div class="me-card__date" data-target="saves-events.date">
-                  <%= event.day_of_week['decorator'] %>
-                </div>
-<!--                <div class="me-card__title mdc-card__title"-->
-<!--                     data-target="saves-events.title">-->
-                  <%#= limit_name_size event.details_name, 32 %>
-<!--                </div>-->
-              </a>
             </div>
-          </div>
-        <% end %>
+          <% end %>
 
-        <% if saved_events.size < 6 %>
-          <div class="me-saves__empty">
-            <i class="material-icons-sharp sentiment-satisfied">
-              sentiment_satisfied
-            </i>
-            <span>Explore as coleções de eventos abaixo e os salve para ver aqui.</span>
-          </div>
-        <% end %>
+          <% if saved_events.size < 6 %>
+            <div class="me-saves__empty">
+              <i class="material-icons-sharp sentiment-satisfied">
+                sentiment_satisfied
+              </i>
+              <span>Explore as coleções de eventos abaixo e os salve para ver aqui.</span>
+            </div>
+          <% end %>
+        </div>
       </div>
-    </div>
 
-  <% end %>
-</div>
+  </div>
+<% end %>
