--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,22 +1,23 @@
 <%= render partial: "feeds/float_menu" %>
 
-<section class="me-page__section">
-
+<!-- <section class="me-page__section"> -->
   <%= render partial: 'components/swipable/swipable' unless current_user&.personas_assortment_finished? %>
+<!-- </section> -->
 
-  <div class="with-section-constraints">
-    <%= render partial: 'saves',
-               locals:  {
-                   identifier:   'salvos',
-                   saved_events: @favorited_events
-               } if current_user %>
-  </div>
-</section>
+  <!-- <div class=""> -->
+<!-- <section class=""> -->
+  <%= render partial: 'saves',
+             locals:  {
+                 identifier:   'salvos',
+                 saved_events: @favorited_events
+             } if current_user %>
+  <!-- </div> -->
+<!-- </section> -->
 
 
-<section class="me-page__section">
+<!-- <section class="me-page__section"> -->
 
-  <div class="me-feed">
+  <div class="me-feed me-page__section">
     <% if params[:q] %>
       <%= render partial: "components/collection/collection",
                  locals:  {
@@ -128,4 +129,4 @@
       <%# render partial: "section", locals: { events: @events[:user], titles: {categories: "Eventos nas categorias", occurences: "acontecendo"}, identifier: 'recomendados', type: :large, filters: { categories: true, occurences: true } } %>
     <% end %>
   </div>
-</section>
+<!-- </section> -->
