--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -1,5 +1,5 @@
 <%= notice %>
 
-<section class="with-section-constraints with-5-columns is-first-section">
+<!-- <section class="me-page--events__section"> -->
   <%= render partial: "components/collection/collection", locals: @locals %>
-</section>
+<!-- </section> -->
