--- a/web/app/assets/images/manifest.json.erb
+++ b/web/app/assets/images/manifest.json.erb
@@ -1,50 +1,50 @@
 {
     "name": "Alegreme",
     "short_name": "Alegreme",
-    "theme_color": "#ffffff",
-    "background_color": "#fffff",
+    "theme_color": "#00AD54",
+    "background_color": "#00AD54",
     "display": "standalone",
     "orientation": "portrait",
     "Scope": "/",
     "start_url": "/?utm_source=pwa",
     "icons": [
       {
-        "src": "images/icons/icon-72x72.png",
+        "src": "<%= image_url "icons/icon-72x72.png" %>",
         "sizes": "72x72",
         "type": "image/png"
       },
       {
-        "src": "images/icons/icon-96x96.png",
+        "src": "<%= image_url "icons/icon-96x96.png" %>",
         "sizes": "96x96",
         "type": "image/png"
       },
       {
-        "src": "images/icons/icon-128x128.png",
+        "src": "<%= image_url "icons/icon-128x128.png" %>",
         "sizes": "128x128",
         "type": "image/png"
       },
       {
-        "src": "images/icons/icon-144x144.png",
+        "src": "<%= image_url "icons/icon-144x144.png" %>",
         "sizes": "144x144",
         "type": "image/png"
       },
       {
-        "src": "images/icons/icon-152x152.png",
+        "src": "<%= image_url "icons/icon-152x152.png" %>",
         "sizes": "152x152",
         "type": "image/png"
       },
       {
-        "src": "images/icons/icon-192x192.png",
+        "src": "<%= image_url "icons/icon-192x192.png" %>",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "images/icons/icon-384x384.png",
+        "src": "<%= image_url "icons/icon-384x384.png" %>",
         "sizes": "384x384",
         "type": "image/png"
       },
       {
-        "src": "images/icons/icon-512x512.png",
+        "src": "<%= image_url "icons/icon-512x512.png" %>",
         "sizes": "512x512",
         "type": "image/png"
       }
