--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <%= favicon_link_tag asset_path 'favicon-32x32.png', sizes: "32x32" %>
   <%= favicon_link_tag asset_path 'favicon-16x16.png', sizes: "16x16" %>
 
-  <link rel="manifest" href="<%= assets_url 'manifest.json' %>"/>
+  <link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Montserrat:800,900|Roboto:300,400,500,700|Material+Icons|Material+Icons+Round|Material+Icons+Sharp">
