Update icons in manifest

--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -19,7 +19,7 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <link rel="apple-touch-icon" href="<%= image_url 'icons/icon-192x192.png' %>">
+  <link rel="apple-touch-icon" href="<%= image_url 'icons/launcher-icon-192x192.png' %>">
   <%= favicon_link_tag asset_path 'favicon-32x32.png', sizes: "32x32" %>
   <%= favicon_link_tag asset_path 'favicon-16x16.png', sizes: "16x16" %>
 
