--- a/web/app/assets/images/manifest.json.erb
+++ b/web/app/assets/images/manifest.json.erb
@@ -1,50 +1,73 @@
 {
     "name": "Alegreme",
+    "description": "Aproveite a cidade de Porto Alegre",
     "short_name": "Alegreme",
-    "theme_color": "#00AD54",
-    "background_color": "#00AD54",
-    "display": "standalone",
+    "theme_color": "#ffffff",
+    "background_color": "#ffffff",
+    "display": "fullscreen",
     "orientation": "portrait",
-    "Scope": "/",
+    "scope": "/",
     "start_url": "/?utm_source=pwa",
+    "lang": "pt-BR",
+    "categories": ["lifestyle", "entertainment"],
     "icons": [
       {
-        "src": "<%= image_url "icons/icon-72x72.png" %>",
+        "src": "<%= image_url 'icons/notification-icon-24x24.png' %>",
+        "sizes": "24x24",
+        "type": "image/png"
+      },
+      {
+        "src": "<%= image_url 'icons/notification-icon-36x36.png' %>",
+        "sizes": "36x36",
+        "type": "image/png"
+      },
+      {
+        "src": "<%= image_url 'icons/notification-icon-48x48.png' %>",
+        "sizes": "48x48",
+        "type": "image/png"
+      },
+      {
+        "src": "<%= image_url 'icons/notification-icon-72x72.png' %>",
         "sizes": "72x72",
         "type": "image/png"
       },
       {
-        "src": "<%= image_url "icons/icon-96x96.png" %>",
+        "src": "<%= image_url 'icons/notification-icon-96x96.png' %>",
         "sizes": "96x96",
         "type": "image/png"
       },
       {
-        "src": "<%= image_url "icons/icon-128x128.png" %>",
-        "sizes": "128x128",
+        "src": "<%= image_url 'icons/launcher-icon-48x48.png' %>",
+        "sizes": "48x48",
         "type": "image/png"
       },
       {
-        "src": "<%= image_url "icons/icon-144x144.png" %>",
+        "src": "<%= image_url 'icons/launcher-icon-72x72.png' %>",
+        "sizes": "72x72",
+        "type": "image/png"
+      },
+      {
+        "src": "<%= image_url 'icons/launcher-icon-96x96.png' %>",
+        "sizes": "96x96",
+        "type": "image/png"
+      },
+      {
+        "src": "<%= image_url 'icons/launcher-icon-144x144.png' %>",
         "sizes": "144x144",
         "type": "image/png"
       },
       {
-        "src": "<%= image_url "icons/icon-152x152.png" %>",
-        "sizes": "152x152",
-        "type": "image/png"
-      },
-      {
-        "src": "<%= image_url "icons/icon-192x192.png" %>",
+        "src": "<%= image_url 'icons/launcher-icon-192x192.png' %>",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "<%= image_url "icons/icon-384x384.png" %>",
+        "src": "<%= image_url 'icons/icon-384x384.png' %>",
         "sizes": "384x384",
         "type": "image/png"
       },
       {
-        "src": "<%= image_url "icons/icon-512x512.png" %>",
+        "src": "<%= image_url 'icons/splash-icon-512x512.png' %>",
         "sizes": "512x512",
         "type": "image/png"
       }
