adjust welcome style for mobile

--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -241,6 +241,7 @@
       @include mobile-only {
         width: 35px;
         height: 35px;
+        border: 2px solid #FFFFFF;
       }
     }
   }
