Adjust in welcome page style

--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -51,6 +51,7 @@
   height: 324px;
   background-image: asset_url("welcome/mockup-android.png");
   background-position: center top;
+  background-size: 100%;
   margin: 95px 0 0 0;
   z-index: 2;
   position: absolute;
