--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -53,7 +53,7 @@
       <% unless mobile_device? %>
         <div class="macbook">
           <div class="macbook__screen">
-            <%= image_tag 'welcome/desktop-screen', alt: "demonstração" %>
+            <%= image_tag 'welcome/desktop-screen', alt: "demonstração", loading: "lazy" %>
           </div>
         </div>
       <% end %>
