--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -8,6 +8,7 @@
     background: $background-z1-color;
     @include mdc-layout-grid-media-query_("phone") {
       border-bottom: 1px solid $border-color;
+      padding: 6px 0;
     }
 
     &:last-child {
