--- a/web/app/assets/stylesheets/components/me-saves.scss
+++ b/web/app/assets/stylesheets/components/me-saves.scss
@@ -71,7 +71,7 @@ $gutter: 6px;
     //margin: 26px 0 55px 0;
     height: 66px;
     padding: 0 12px;
-    border: 1px solid $border-color;
+    // border: 1px solid $border-color;
 
     & i {
       font-size: 1.6em;
