--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -3,7 +3,7 @@
 .me-similar {
   grid-column: 12 span;
   display: grid;
-  margin: 35px 0 12px -13%;
+  margin: 0 0 12px -10%;
   //grid-gap: 0 12px;
   grid-template-columns: repeat(12, minmax(0, 1fr));
   height: auto;
@@ -11,11 +11,11 @@
   padding: 20px 35px;
   border: 1px solid #e0e0e0;
   border-radius: 10px;
-  width: 126%;
+  width: 120%;
   @include mdc-layout-grid-media-query_("phone") {
     width: auto;
     padding: 6px 0;
-    margin: 12px;
+    margin: 0 12px 12px 12px;
   }
 
 
@@ -118,7 +118,7 @@
     font-size: 11px;
     margin: 0 0 50px 0;
     padding: 0 12px;
-    border: 1px solid $border-color;
+    // border: 1px solid $border-color;
 
     & i {
       font-size: 1.6em;
