--- a/web/app/assets/stylesheets/components/me-swipable.scss
+++ b/web/app/assets/stylesheets/components/me-swipable.scss
@@ -1,7 +1,7 @@
 .me-swipable {
   z-index: 2;
-  max-width: 540px;
-  margin: auto;
+  max-width: 500px;
+  margin: 35px auto 10px;
   position: relative;
   padding: 0 $section-padding-phone;
   @include mdc-layout-grid-media-query_("phone") {
@@ -20,7 +20,7 @@
     display: flex;
     flex-wrap: wrap;
     align-content: flex-end;
-    padding: 25px 50px 25px 25px;
+    padding: 15px 30px 15px 15px;
     @include mdc-layout-grid-media-query_("phone") {
       padding: 15px;
     }
@@ -30,8 +30,8 @@
     }
 
     &-title {
-      font-size: 28px;
-      font-weight: 800;
+      font-size: 22px;
+      font-weight: 700;
       padding-bottom: 6px;
       font-family: $font-primary-family;
       @include mdc-layout-grid-media-query_("phone") {
@@ -40,9 +40,9 @@
     }
 
     &-description {
-      font-size: 16px;
-      line-height: 1.2em;
-      font-weight: 100;
+      font-size: 14px;
+      line-height: 1.3em;
+      font-weight: 400;
       @include mdc-layout-grid-media-query_("phone") {
         font-size: 12px;
       }
@@ -105,7 +105,7 @@
   & .stackedcards .stackedcards-container > *, .stackedcards-overlay {
     position: absolute;
     width: 100%; /* set 100% */
-    height: 300px; /* set 100% */
+    height: 250px; /* set 100% */
     will-change: transform, opacity;
     top: 0;
     border-radius: 10px;
@@ -209,9 +209,11 @@
 
     & > button {
       margin: 0 12px;
-      display: grid;
+      display: flex;
       text-align: center;
       height: 55px;
+      flex-direction: column;
+      justify-content: flex-end;
       @include mdc-button-ink-color($font-tertiary-color);
       //@include mdc-button-outline-color($font-secondary-color)
     }
@@ -239,6 +241,10 @@
     background: #d6d6d6;
   }
 
+  & .final-state {
+    transition: opacity 0.3s linear;
+  }
+
   & .final-state.active {
     position: absolute;
     opacity: 1;
@@ -250,6 +256,7 @@
     width: 100%;
     height: 100%;
     transition: opacity 400ms ease;
+    text-align: center;
   }
 
   & .final-state.hidden {
