--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -52,13 +52,19 @@
       <% unless mobile_device? %>
         <div class="macbook">
           <div class="macbook__screen">
-            <%= image_tag 'welcome/desktop-screen', alt: "demonstração", loading: "lazy" %>
+            <video autoplay="autoplay" loop="true" muted="true">
+              <source src="<%= asset_url 'welcome/desktop-screen.webm' %>" type="video/webm">
+              <source src="<%= asset_url 'welcome/desktop-screen.mp4' %>" type="video/mp4">
+            </video>
           </div>
         </div>
       <% end %>
       <div class="android">
         <div class="android__screen">
-          <%= responsive_image_tag 'welcome/android-screen', alt: 'demonstração', only: {'1.5x' => true} %>
+          <video autoplay="autoplay" loop="true" muted="true">
+            <source src="<%= asset_url 'welcome/android-screen.webm' %>" type="video/webm">
+            <source src="<%= asset_url 'welcome/android-screen.mp4' %>" type="video/mp4">
+          </video>
         </div>
       </div>
       <!-- <div class="macbook__beta-explanation">
