--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -7,6 +7,10 @@
     </div>
   </section>
 
+  <section class=menu>
+    <span onclick="location.assign('/users/auth/google_oauth2')">Entrar</span>
+  </section>
+
   <section class="headline">
     <h1>Aproveite a cidade de Porto Alegre</h1>
     <h2>Atividades culturais, meetups, shows, rolês, feiras de rua, aquele filme no Mario Quintana...</br>
