--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -1,7 +1,7 @@
 <header class="me-top-app-bar mdc-top-app-bar mdc-top-app-bar--fixed <%= controller == 'events' ? 'me-top-app-bar--events' : '' %>"
         id="top-bar">
   <div class="mdc-top-app-bar__row">
-    <% if mobile_device? && params[:controller] == 'feeds' && params[:action] == 'index' %>
+    <% if params[:controller] == 'feeds' && params[:action] == 'index' %>
       <section
       class="me-top-app-bar__section me-top-app-bar__section--left mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
         <a href="/">
@@ -9,13 +9,16 @@
         </a>
       </section>
     <% else %>
-    <span class="me-top-app-bar__back-button"
-      onclick="window.history.back()">
-      <i class="material-icons">keyboard_backspace</i>
-    </span>
+      <span class="me-top-app-bar__back-button"
+        onclick="window.history.back()">
+        <i class="material-icons">keyboard_backspace</i>
+      </span>
     <% end %>
-    <% if mobile_device? && controller == 'events' %>
-
+    <% if mobile_device? && params[:controller] == 'events' %>
+      <span class="me-top-app-bar__back-button"
+        onclick="window.history.back()">
+        <i class="material-icons">keyboard_backspace</i>
+      </span>
     <% else %>
       <section class="me-top-app-bar__section me-top-app-bar__section--middle mdc-top-app-bar__section">
         <div class="me-search-field me-search-field mdc-text-field mdc-text-field--with-leading"
